force-app/main/default/objects/Logg_Controller__c/Logg_Controller__c.object-meta.xml
<CustomObject>
    <description>This controllers some of the Logger__c behavior.</description>
    <label>Logger Controller</label>
    <nameField>
        <label>Logger Controller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logger Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>