force-app/main/default/objects/Logg_Controller__c/fields/Log_Only_Failures__c.field-meta.xml
<CustomField>
    <fullName>Log_Only_Failures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked with log only status codes &gt; 300</description>
    <inlineHelpText>If checked with log only status codes &gt; 300</inlineHelpText>
    <label>Log Only Failures</label>
    <type>Checkbox</type>
</CustomField>