force-app/main/default/objects/Logg_Controller__c/fields/Logger_Record_Names__c.field-meta.xml
<CustomField>
    <fullName>Logger_Record_Names__c</fullName>
    <description>Name given to appropriate logger__c records.</description>
    <inlineHelpText>Name given to appropriate logger__c records.</inlineHelpText>
    <label>Logger Record Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>