force-app/main/default/objects/Logg_Controller__c/fields/Put_Data_In_Fields__c.field-meta.xml
<CustomField>
    <fullName>Put_Data_In_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the request &amp; response will be stored in the appropriate fields. 
Else, it will be stored in a connected txt file.</description>
    <inlineHelpText>If checked, the request &amp; response will be stored in the appropriate fields. 
Else, it will be stored in a connected txt file.</inlineHelpText>
    <label>Put Data In Fields</label>
    <type>Checkbox</type>
</CustomField>