force-app/main/default/objects/Logg_Controller__c/recordTypes/API_Logger.recordType-meta.xml
<RecordType>
    <fullName>API_Logger</fullName>
    <active>true</active>
    <description>Default</description>
    <label>API Logger</label>
</RecordType>