force-app/main/default/objects/Logg_Controller__c/recordTypes/Dummy_For_Testing_Porpuses.recordType-meta.xml
<RecordType>
    <fullName>Dummy_For_Testing_Porpuses</fullName>
    <active>true</active>
    <description>DON&apos;T DELETE!</description>
    <label>Dummy For Testing Porpuses</label>
</RecordType>